# SuspicionKit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/suspicionkit/: cli.py  models.py  renderer.py  reports.py
src/suspicionkit/core/: analyzer.py  content_probe.py  dns_probe.py  http_probe.py  normalizer.py  popularity.py  rules.py  scoring.py  ssl_probe.py  whois_probe.py
tests/: test_analyzer.py  test_normalizer.py  test_reports.py  test_whois_probe.py
