[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "suspicionkit"
version = "0.0.2"
description = "A terminal-first threat analysis toolkit for suspicious links and web artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Art", email = "notime4oki@gmail.com" }
]
keywords = ["security", "url", "phishing", "cli", "rich", "osint", "whois", "ssl"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "tldextract>=5.1.0",
  "dnspython>=2.6.0",
  "idna>=3.6",
  "python-whois>=0.9.4",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
suspicionkit = "suspicionkit.cli:app"
skit = "suspicionkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/suspicionkit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]